After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732720 - Double click don't work while adding new input sources
Double click don't work while adding new input sources
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Region & Language
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-04 06:41 UTC by anish
Modified: 2014-07-18 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
region: Make it possible to add an input source by activating its row (3.88 KB, patch)
2014-07-04 16:19 UTC, Rui Matos
committed Details | Review

Description anish 2014-07-04 06:41:12 UTC
I  have installed Fedora-Live-Workstation-x86_64-rawhide-20140702 with GNOME.3.13.3 

Steps to reproduce:-

1: using g-c-c select region and select 

2: Click on to add new input sources, list of input sources shows up

3: Select input sources of your choice and double click on it

Expected Result:-

Input sources should be added, you need to click on add button for addition of input sources

Note:-

I am not sure about it's bug or enhancement 

I also attached screen shot as well
Comment 1 Rui Matos 2014-07-04 16:19:09 UTC
Created attachment 279922 [details] [review]
region: Make it possible to add an input source by activating its row

Selecting and pressing the Add button continues to work but this
should streamline the the input chooser dialog for mouse users by
making it possible to add by double clicking a row.
Comment 2 Bastien Nocera 2014-07-09 09:20:53 UTC
Review of attachment 279922 [details] [review]:

Looks good
Comment 3 Rui Matos 2014-07-18 14:07:02 UTC
Attachment 279922 [details] pushed as f28e06a - region: Make it possible to add an input source by activating its row